[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algorithms"
version = "0.0.0.dev0"
dependencies = ["numpy==2.0.1"]
requires-python = ">=3.12"
authors = [{ name = "Orkun GÜRLER", email = "orkun.guerler@gmail.com" }]
maintainers = [{ name = "Orkun GÜRLER", email = "orkun.guerler@gmail.com" }]
description = "FCM Clustering Variants"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]